--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -6,7 +6,7 @@
     ansible.builtin.shell: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
 
   - name: Install NodeJS
-    ansible.builtin.package:
+    ansible.builtin.dnf:
       name: nodejs
       start: present
 
