--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -5,10 +5,15 @@
   - name: disable and enable old nodejs
     ansible.builtin.shell: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
 
-  - name: Install NodeJS
+  - name: Install nodejs
     ansible.builtin.dnf:
-      name: nodejs
-      start: present
+      name: nodejs 
+      state: present
+
+  # - name: Install NodeJS
+  #   ansible.builtin.dnf:
+  #     name: nodejs
+  #     start: present
 
   - name: Add application User
     ansible.builtin.user:
