--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -34,5 +34,31 @@
       src: /tmp/catalogue.zip
       dest: /app
       remote_src: yes
+    
+  - name: Install dependencies
+    ansible.builtin.command: npm install
+    args:
+      chdir: /app
+
+  - name: copy catalogue service
+    ansible.builtin.copy:
+      src: catalogue.service
+      dest: /etc/systemd/system/catalogue.service
+
+  - name: deamon realod and start
+    ansible.builtin.systemd_service:
+      # state: restarted
+      daemon_reload: true
+
+  - name: copy mongodb
+    ansible.builtin.copy:
+      src: mongodb.repo
+      dest: /etc/yum.repos.d/mongodb.repo
+
+  - name: install mongodb clint
+    ansible.builtin.package:
+      name: mmongodb-org-shell
+      state: present  
+     
 
 
