--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -18,6 +18,11 @@
   - name: Add application User
     ansible.builtin.user:
       name: roboshop
+
+  - name: Recursively remove app directory
+    ansible.builtin.file:
+      path: /app
+      state: absent    
     
   - name: create app directory
     ansible.builtin.file:
@@ -55,8 +60,8 @@
       src: mongodb.repo
       dest: /etc/yum.repos.d/mongodb.repo
 
-  -- name: Install mongodb client
-    ansible.builtin.package: 
+  - name: Install mongodb client
+    ansible.builtin.package:
       name: mongodb-org-shell
       state: present
      
