--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -65,5 +65,17 @@
       name: mongodb-org-shell
       state: present
      
+  - name: get the categories count
+    ansible.builtin.command:  mongo --host mongodb.bujji.online --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
+    register: product_count
 
+  - name: load catalogue data
+    ansible.builtin.command: mongo --host mongodb.bujji.online < /app/schema/catalogue.js
+    when: product_count.stdout == "0" # keep double quotes
+
+  - name: start and enable catalogue
+    ansible.builtin.service:
+      name: catalogue
+      state: restarted
+      enabled: yes
 
