--- a/web.yaml
+++ b/web.yaml
@@ -3,7 +3,7 @@
   become: yes
   tasks:
   - name: install nginx
-    ansible.builin.dnf:
+    ansible.builtin.dnf:
       name: nginx
       state: present
 
