--- a/redis.yaml
+++ b/redis.yaml
@@ -4,7 +4,7 @@
   tasks:
   - name: install redis repo file
     ansible.builtin.dnf:
-      name: https://rpms.remirepo.net/enterprise/remi-release-8.rpm -y
+      name: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
       state: present
 
   - name: enable redis
